@@ -1,6 +1,7 @@
 2016-05-29  SilverNexus
 	* output.c: Use fwrite() instead of printf() when telling the user
 	  the location of the output file.
+	  Only close the output file when we opened one.
 
 2016-05-28  SilverNexus
 	* search.c: Extract the needle length checks from the case-insensitive search
